"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-08-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-14:
	  hacknet: sorted ports summaries by order of port declaration
		in the original definition for the sake of readability.
		Affected test cases updated.


	* HACKT-00-01-04-main-00-83-27-netlist-01-13:
	  hacknet: implemented pass-gate transistors, quick-and-dirty,
		added basic test cases.


	* HACKT-00-01-04-main-00-83-27-netlist-01-12:
	  hacknet: transistors are now sized by literal params, 
		still no discretization or value constraints yet.
	  Added some basic sizing tests. 


2009-08-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-11:
	  Added check for CMOS-implementability in PRS literals, 
		check also works in precharge expressions.  
		Internal node uses are already direction-checked
		at create-time.
		diagnostic: override name of top-level footprint/netlist.
	  Added some test cases to regression suite.


	* HACKT-00-01-04-main-00-83-27-netlist-01-10:
	  hacknet: implemented precharge transistors
		added some transistor attributes (keeper, ckeeper, pchg)
		emit precharge transistors with ":pchg" suffix.
	  Basic test cases added.  


2009-08-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-09:
	  hacknet: implemented internal node subnets, using on-demand
		creation as each internal node expression is uesd.
	  A few test cases added, including precharge shared-gate XOR.
	  Minor updates to raw_dump for comprehensibility.
	  For now unused internal nodes nets are suppressed.
	  Empty subcircuits are suppressed from output.  


2009-08-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-08:
	  hacknet bug fix: was mistakenly using globally assigned 