@@ -4,6 +4,8 @@
 netgen rejects this:
 FATAL: @-expression with unknown label a
 **/
+// should internal node gates be emitted in their respective subcircuits?
+// FIXME: emit proper ports for bar
 
 defproc foo(bool en, x, _y) {
 _y @ [autokeeper=0];
